syntax = "proto3";

package pending_event_message;

service PendingEventService {
  rpc ReportPendingExpiredEvent(PendingExpiredEventRequest)
      returns (PendingExpiredEventResponse);
}

message PendingExpiredEventRequest {
  string topic = 1;
  uint32 count = 2;
  map<string, uint32> options = 3;
}

message PendingExpiredEventResponse {
  bool cached = 1;
  string status = 2;
}